[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/themes/h2.tres" type="Theme" id=1]
[ext_resource path="res://scripts/new_period_popup.gd" type="Script" id=2]

[node name="NewPeriodPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -624.0
margin_bottom = -500.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 114.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 214.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 214.0

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 5
theme = ExtResource( 1 )
text = "Введите название периода"
align = 1
valign = 1

[node name="TextEditTitle" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 400.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelAmount" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 400.0
margin_bottom = 116.0
size_flags_horizontal = 5
theme = ExtResource( 1 )
text = "Введите сумму оплаты периода"
align = 1
valign = 1

[node name="TextEditAmount" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 400.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 400.0
margin_bottom = 214.0

[node name="ButtonOk" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 198.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Создать"

[node name="ButtonCancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Отмена"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonOk" to="." method="_on_ButtonOk_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
